--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
     --light-grey: hsl(0, 0%, 81%);
     --light-grayish-blue: hsl(210, 46%, 95%);
     --black: hsl(0, 0, 0);
+    --border-color: hsl(263, 71%, 66%);
 }
 
 *, *::before, *::after {
@@ -14,8 +15,8 @@
     margin: 0;
 }
 
-html {
-    font-size: 13px;
+body {
+    font-size: 0.813rem;
     font-family: "Barlow Semi Condensed", sans-serif;
 }
 
@@ -28,19 +29,20 @@ html {
 }
 
 .container {
-    max-width: 25.4rem;
+    max-width: 20.638rem;
     display: grid;
-    gap: 2rem;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    gap: 1.625rem;
+    padding-top: 6em;
+    padding-bottom: 6em;
 }
 
 .item {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-    padding: 2rem 2.9rem;
-    border-radius: 0.5rem;
+    gap: 1.22rem;
+    padding: 2em 2.9em;
+    border-radius: 0.4rem;
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -56,6 +58,7 @@ html {
     background-color: var(--dark-grayish-blue);
     color: var(--white);
 }
+
 .item-three {
     background-color: var(--white);
     color: var(--black);
@@ -73,7 +76,7 @@ html {
 
 .header {
     display: flex;
-    gap: 1.5rem;
+    gap: 1.2rem;
     align-items: center;
 }
 
@@ -87,6 +90,7 @@ html {
 
 .img-one {
     background-image: url('../images/image-daniel.jpg');
+    border: 2px solid var(--border-color);
 }
 
 .img-two {
@@ -95,10 +99,12 @@ html {
 
 .img-three {
     background-image: url('../images/image-jeanette.jpg');
+
 }
 
 .img-four {
     background-image: url('../images/image-patrick.jpg');
+    border: 2px solid var(--border-color);
 }
 
 .img-five {
@@ -106,28 +112,26 @@ html {
 } 
 
 .name { 
-    font-size: 1rem;
     font-weight: 600;
-    opacity: 80%;
+    opacity: 0.8;
 }
 
-.author-title {
-    font-size: 0.87rem;
-    opacity: 50%;
+.title {
+    font-size: 0.71rem;
+    opacity: 0.5;
 }
 
 .text {
-    opacity: 70%;
-    line-height: 1.3;
+    opacity: 0.7;
+    line-height: 1.4;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 80.5rem) {
+
     .container {
-        display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 30px;
-        max-width: 80%;
+        gap: 1.8rem;
+        max-width: 80rem;
     }
 
     .item-one {
@@ -139,17 +143,54 @@ html {
         grid-column: 3;
         grid-row: 1;
     }
+
     .item-three {
         grid-column: 1;
         grid-row: 2;
     }
+
     .item-four {
         grid-column: 2 / 4;
         grid-row: 2;
     }
+
     .item-five {
         grid-column: 4;
         grid-row: 1 / 3;
+    }
+}
+
+@media (min-width: 56rem) and (max-width: 80.5rem) {
+
+    .container {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1.8rem;
+        max-width: 80%;
+    }
+
+    .item-one {
+        grid-column: 1 / 3;
+        grid-row: 1;
+    }
+
+    .item-two {
+        grid-column: 3 / 5;
+        grid-row: 1;
+    }
+
+    .item-three {
+        grid-column: 1 / 3;
+        grid-row: 2;
+    }
+
+    .item-four {
+        grid-column: 3 / 5;
+        grid-row: 2;
+    }
+
+    .item-five {
+        grid-column: 1 / 5;
+        grid-row: 3;
     }
 }
 
