--- a/styles/style.css
+++ b/styles/style.css
@@ -45,33 +45,35 @@ body {
     box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
-
-.item-one {
+.item:nth-of-type(1) {
     background-color: var(--moderate-violet);
     color: var(--white);
-    background-image: url('../images/bg-pattern-quotation.svg');
-    background-repeat: no-repeat;
-    background-position: 88% 0;
 }
 
-.item-two {
+.item:nth-of-type(2) {
     background-color: var(--dark-grayish-blue);
     color: var(--white);
 }
 
-.item-three {
+.item:nth-of-type(3) {
     background-color: var(--white);
     color: var(--black);
 }
 
-.item-four {
+.item:nth-of-type(4) {
     background-color: var(--blackish-blue);
     color: var(--white);
 }
 
-.item-five {
+.item:nth-of-type(5) {
     background-color: var(--white);
     color: var(--black);
+}
+
+.quote {
+    background-image: url('../images/bg-pattern-quotation.svg');
+    background-repeat: no-repeat;
+    background-position: 88% 0;
 }
 
 .header {
@@ -80,7 +82,7 @@ body {
     align-items: center;
 }
 
-.img {
+.author_image {
     background-repeat: no-repeat;
     background-size: cover;
     width: 30px;
@@ -88,35 +90,16 @@ body {
     border-radius: 50%;
 }
 
-.img-one {
-    background-image: url('../images/image-daniel.jpg');
+.border {
     border: 2px solid var(--border-color);
 }
 
-.img-two {
-    background-image: url('../images/image-jonathan.jpg');
-}
-
-.img-three {
-    background-image: url('../images/image-jeanette.jpg');
-
-}
-
-.img-four {
-    background-image: url('../images/image-patrick.jpg');
-    border: 2px solid var(--border-color);
-}
-
-.img-five {
-    background-image: url('../images/image-kira.jpg');
-} 
-
-.name { 
+.author__name { 
     font-weight: 600;
     opacity: 0.8;
 }
 
-.title {
+.author__title {
     font-size: 0.71rem;
     opacity: 0.5;
 }
@@ -126,7 +109,7 @@ body {
     line-height: 1.4;
 }
 
-@media (min-width: 80.5rem) {
+@media (min-width: 70rem) {
 
     .container {
         grid-template-columns: repeat(4, 1fr);
@@ -135,62 +118,62 @@ body {
         max-width: 80rem;
     }
 
-    .item-one {
+    .item:nth-of-type(1) {
         grid-column: 1 / 3;
         grid-row: 1;
     }
 
-    .item-two {
+    .item:nth-of-type(2) {
         grid-column: 3;
         grid-row: 1;
     }
 
-    .item-three {
+    .item:nth-of-type(3) {
         grid-column: 1;
         grid-row: 2;
     }
 
-    .item-four {
+    .item:nth-of-type(4) {
         grid-column: 2 / 4;
         grid-row: 2;
     }
 
-    .item-five {
+    .item:nth-of-type(5) {
         grid-column: 4;
         grid-row: 1 / 3;
     }
 }
 
-@media (min-width: 56rem) and (max-width: 80.5rem) {
+@media (min-width: 45rem) and (max-width: 70rem) {
 
     .container {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 1.8rem;
         max-width: 80%;
     }
 
-    .item-one {
-        grid-column: 1 / 3;
+    .item:nth-of-type(1) {
+        grid-column: 1;
         grid-row: 1;
     }
 
-    .item-two {
-        grid-column: 3 / 5;
+    .item:nth-of-type(2) {
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .item:nth-of-type(3) {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .item:nth-of-type(4) {
+        grid-column: 2;
         grid-row: 1;
     }
 
-    .item-three {
+    .item:nth-of-type(5){
         grid-column: 1 / 3;
-        grid-row: 2;
-    }
-
-    .item-four {
-        grid-column: 3 / 5;
-        grid-row: 2;
-    }
-
-    .item-five {
-        grid-column: 1 / 5;
         grid-row: 3;
     }
 }
